--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -40,7 +40,7 @@ entries:
       output: web      
 
       subfolders:
-      - title: Endpoints
+      - title: Endpoint Descriptions
         output: web      
         subfolderitems:
 
@@ -56,7 +56,7 @@ entries:
           url: /personnel_file_api_endpoint_documents.html
           output: web
 
-      - title: Endpoints2
+      - title: Endpoint Specifications
         output: web      
         subfolderitems:
 
