--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -40,7 +40,7 @@ entries:
       output: web      
 
       subfolders:
-      - title: Endpoint Descriptions
+      - title: Endpoints
         output: web      
         subfolderitems:
 
