--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -51,6 +51,10 @@ entries:
         - title:  Documents
           url: /personnel_file_api_entities_documents.html
           output: web
+ 
+    - title: tessie
+      url: /personnel_file_api_intro.html
+      output: web    
 
       subfolders:
       - title: Endpoints
