--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -39,7 +39,7 @@ entries:
       url: /personnel_file_api_intro.html
       output: web
 
-      subfolders:
+      subfolders_endpoints:
       - title: Endpoints
         output: web
         subfolderitems:
@@ -72,7 +72,7 @@ entries:
           url: /personnel_file_api_documents.html
           output: web
 
-      subfolders:
+      subfolders_entities:
       - title: Entities
         output: web      
         subfolderitems:
@@ -85,7 +85,7 @@ entries:
           url: /personnel_file_api_entities_documents.html
           output: web
 
-      subfolders:
+      subfolders_expressions:
       - title: Expressions
         output: web      
         subfolderitems:
